<resources>
    <string name="app_name">tilTaxi</string>
    <string name="logo_text">tilTaxi</string>
    <string name="login_title">Log in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="cancel_button">Cancel</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="reset_password_title">Reset password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <!-- Register Fragment -->
    <string name="register_title">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_photo">Profile photo</string>
    <string name="repeat_password">Repeat password</string>
    <string name="insert_photo">Insert photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="submit">Submit</string>

    <!-- Hints -->
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="repeat_password_hint">Repeat password</string>

    <!-- Navigation Menu -->
    <string name="home">Home</string>
    <string name="book_an_uber">Book an Uber</string>
    <string name="ride_history">Ride History</string>
    <string name="favorite_rides">Favorite Rides</string>
    <string name="support">Support</string>

    <!-- Navigation Menu Driver -->
    <string name="my_vehicle">My Vehicle</string>
    <string name="my_rides">My Rides</string>

    <!-- Navigation Menu Admin -->
    <string name="driver_registration">Driver Registration</string>

    <!-- Profile page -->
    <string name="my_profile_title">My Profile</string>
    <string name="edit_profile_title">Edit profile</string>
    <string name="save_changes_title">Save changes</string>

    <string name="active_title">Active</string>
    <string name="inactive_title">Inactive</string>

    <string name="profile_info_title">Profile info</string>
    <string name="vehicle_detalis_title">Vehicle detalis</string>

    <string name="driver_updates_title">Driver Upd.</string>
    <string name="blocking_title">Blocking</string>
    <string name="panic_notifications_title">Panic notif.</string>

    <string name="name_title">Name</string>
    <string name="surname_title">Surname</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="phone_title">Phone</string>

    <string name="vehicle_model_title">Vehicle model:</string>
    <string name="vehicle_type_title">Vehicle type:</string>
    <string name="license_plate_title">License plate:</string>
    <string name="number_of_seats_title">Number of seats:</string>
    <string name="additional_options_title">Additional options:</string>
    <string name="baby_transport_title">Baby transport:</string>
    <string name="pet_friendly_title">Pet friendly:</string>
    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>

    <!-- Driver Ride History -->
    <string name="ride_history_heading">Ride History</string>
    <string name="ride_history_text_overview">Overview of all your completed and canceled rides</string>
    <string name="ride_details_heading">Ride Details</string>
    <string name="reset_filters">Reset filters</string>
    <string name="from_date">From date</string>
    <string name="from">From</string>
    <string name="to_date">To date</string>
    <string name="to">To</string>
    <string name="apply_nfilters">Apply\nFilters</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_month">Last month</string>
    <string name="finished_only">Finished only</string>
    <string name="canceled_only">Canceled only</string>
    <string name="all">All</string>
    <string name="fast_safe_and_reliable_ntaxi_service_near_you">Fast, safe and reliable\ntaxi service near you</string>
    <string name="see_available_rides_near_you">See available rides near you</string>
    <string name="watch_our_fleet_of_drivers_in_real_time_click_on_any_vehicle_to_see_driver_details">Watch our fleet of drivers in real-time. Click on any vehicle to see driver details.</string>
    <string name="welcome_to">Welcome To</string>
    <string name="tiltaxi">tilTaxi</string>
    <string name="taxi_hero_image">Taxi hero image</string>

    <!-- Ride Estimation -->
    <string name="estimate_ride">Estimate ride time</string>
    <string name="pickup_address">Enter pickup location</string>
    <string name="destination_address">Enter destination</string>
    <string name="ride_estimation">Ride Estimation</string>
    <string name="estimated_time">Estimated Time:</string>
    <string name="estimated_distance">Distance:</string>
    <string name="estimated_price">Price:</string>
    <string name="estimated_vehicle">Vehicle:</string>
    <string name="request_a_ride">Request a ride</string>
    <string name="assigned_rides">Assigned Rides</string>
    <string name="all_rides_assigned_to_you">All rides assigned to you</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="all_upcoming">All upcoming</string>
    <string name="no_assigned_rides">No assigned rides</string>
    <string name="you_don_t_have_any_assigned_rides_at_the_moment">You don\'t have any assigned rides at the moment</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="please_provide_a_reason_for_cancellation">Please provide a reason for cancellation</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>

    <string-array name="vehicle_types">
        <item>Standard</item>
        <item>Luxury</item>
        <item>Van</item>
    </string-array>
</resources>